# nicegui_mcp_cleint

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: chatbot.py  llm_settings.py  main.py  mcp_server_settings.py
app/api/: config.py  react_agent.py
app/settings/: llm_settings.py  mcp_server_settings.py
